--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
     <div class="profile-info">
         <h1>Sadi Uzzaman</h1>
+        <h2>Web Developer</h2>
         <p class="about">This is Sadi and This is my CV. Here need an real opportunity to go 
-            long in the field of Information Technology.</p>
+            long in the field of Technology.</p>
             <div class="social-media">
                 <a href="https://www.facebook.com/sadi.uzzaman.92"><img src="images/facebook-logo-png-6381.png"></a>
                 <a href="https://twitter.com/SadiWhite20"><img src="images/twetterIcon.png"></a>
